# ESP-IDF

./: .gitignore  README.md  tool_set_config.json
01_CLuces/components/con_luces/: con_luces.c
01_CLuces/components/con_mqtt/: con_mqtt.c
01_CLuces/components/con_wifi/: con_wifi.c
01_CLuces/components/config/: CMakeLists.txt  config.c
01_CLuces/components/funciones/: funciones.c
01_CLuces/main/: main.c
01_NEC_RMT/: .cproject  .project  CMakeLists.txt  README.md  partitions.csv
01_NEC_RMT/components/con_firebase/: CMakeLists.txt  con_firebase.c
01_NEC_RMT/components/con_mqtt/: CMakeLists.txt  con_mqtt.c
01_NEC_RMT/components/con_wifi/: con_wifi.c
01_NEC_RMT/components/config/: CMakeLists.txt
01_NEC_RMT/components/funciones/: CMakeLists.txt  funciones.c
01_NEC_RMT/components/ir_nec_encoder/: CMakeLists.txt
01_NEC_RMT/components/ir_rx/: CMakeLists.txt  ir_rx.c
01_NEC_RMT/components/ir_tx/: CMakeLists.txt  ir_tx.c
01_NEC_RMT/data/: db_controles.json
01_NEC_RMT/main/: CMakeList.txt  CMakeLists.txt  main.c
02_CLuces/: partitions.csv
02_CLuces/components/con_luces/: CMakeLists.txt
02_CLuces/components/con_mqtt/: con_mqtt.c
02_CLuces/components/con_ntp/: CMakeLists.txt  con_ntp.c
02_CLuces/components/con_wifi/: con_wifi.c
02_CLuces/components/funciones/: CMakeLists.txt
02_CLuces/main/: CMakeLists.txt
04_NEC_RMT/: CMakeLists.txt  README.md
04_NEC_RMT/components/funciones/: CMakeLists.txt  funciones.c
04_NEC_RMT/components/funciones/include/: funciones.h
04_NEC_RMT/data/: db_ir.json
04_NEC_RMT/main/: CMakeLists.txt  main.c
(+35 files in other folders)
